--- a/config.env
+++ b/config.env
@@ -1,11 +1,9 @@
-CONFIG_ENV=config.env
-
-KERNEL_SOURCE=https://github.com/xiaoleGun/android_kernel_xiaomi_wayne-4.19
-KERNEL_SOURCE_BRANCH=twrp-12
-KERNEL_CONFIG=vendor/wayne_defconfig
-KERNEL_IMAGE_NAME=Image.gz-dtb
+KERNEL_SOURCE=https://github.com/bzfxm/kernel_xiaomi_sm8250
+KERNEL_SOURCE_BRANCH=android12-stable
+KERNEL_CONFIG=umi_defconfig
+KERNEL_IMAGE_NAME=Image
 ARCH=arm64
-EXTRA_CMDS:LD=ld.lld
+EXTRA_CMDS:LD=ld.lld LOCALVERSION=_$BUILD_TIME
 
 # Clang
 ## Custom
@@ -23,18 +21,10 @@ CLANG_VERSION=r450784d
 # GCC
 ENABLE_GCC_ARM64=true
 ENABLE_GCC_ARM32=true
-USE_CUSTOM_GCC_64=false
-CUSTOM_GCC_64_SOURCE=
-CUSTOM_GCC_64_BRANCH=
-USE_CUSTOM_GCC_32=false
-CUSTOM_GCC_32_SOURCE=
-CUSTOM_GCC_32_BRANCH=
 
 # KernelSU flags
-ENABLE_KERNELSU=false
+ENABLE_KERNELSU=true
 KERNELSU_TAG=main
-KSU_EXPECTED_SIZE=
-KSU_EXPECTED_HASH=
 
 # Configuration
 DISABLE-LTO=false
@@ -50,4 +40,4 @@ NEED_DTBO=false
 
 # Build boot images
 BUILD_BOOT_IMG=false
-SOURCE_BOOT_IMAGE=https://raw.githubusercontent.com/xiaoleGun/KernelSU_action/main/boot/boot.img
+SOURCE_BOOT_IMAGE=
