--- a/config.env
+++ b/config.env
@@ -15,7 +15,7 @@ CUSTOM_CLANG_BRANCH=
 CUSTOM_CMDS:CLANG_TRIPLE=aarch64-linux-gnu-
 
 ## AOSP
-CLANG_BRANCH=master
+CLANG_BRANCH=android13-release
 CLANG_VERSION=r450784d
 
 # GCC
