--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
-KERNEL_SOURCE=https://github.com/chaptsand/android_kernel_msm-4.19
-KERNEL_SOURCE_BRANCH=lineage-20
-KERNEL_CONFIG=vendor/kona-perf_defconfig
+KERNEL_SOURCE=https://github.com/bzfxm/kernel_xiaomi_sm8250
+KERNEL_SOURCE_BRANCH=android12-stable
+KERNEL_CONFIG=umi_defconfig
 KERNEL_IMAGE_NAME=Image
 ARCH=arm64
 EXTRA_CMDS:LD=ld.lld LOCALVERSION=_$BUILD_TIME
